* Moved locking the looper from the GLRenderer class into the GLView class:   when the view is detached, fRenderer has already been released, and wouldn't   unlock the looper anymore in GLTeapot. This fixes bug #1626. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23691 a95241bf-73f2-0310-859d-f6bbb57e9c96